--- a/02-component/09.props.html
+++ b/02-component/09.props.html
@@ -2,7 +2,12 @@
   <!-- 传值 静态值 -->
   <comp title="1" ></comp>
   <!-- 传值 动态值 -->
-  <comp2 :title="foo" :bar="[1,2,3]" :obj="{bar: '23'}" v-bind="{id:1, xx: 'xx'}"></comp2>
+  <comp2 
+    :title="foo"
+    :bar="[1,2,3]" 
+    :obj="{bar: '23'}" 
+    v-bind="{id:1, xx: 'xx'}">
+  </comp2>
 </div>
 
 <script src="https://unpkg.com/vue@3"></script>
