--- a/02-component/10.Component-demo.html
+++ b/02-component/10.Component-demo.html
@@ -1,6 +1,6 @@
 <!-- 将原有07的demo进行组件化改造： -->
 
-<!-- 组件化模板： -->
+<!-- 子组建，组件化模板： -->
 <script type="text/x-template" id="fruits-list">
   <ul>
     <li 
@@ -31,7 +31,7 @@
 </script>
 
 <div id="app">
-  <!-- 组件使用 -->
+  <!-- 父组件，组件使用 -->
   <fruits-list :fruits="fruits"></fruits-list>
 </div>
 
@@ -46,11 +46,15 @@
       }
     },
   })
+  // 全局注册component, FruitsList可在子组件中使用：
   .component('fruits-list', FruitsList)
   .mount('#app')
 </script>
 
 <style>
+  li {
+    cursor: pointer;
+  }
   .active {
     background-color: #ccc;
   }
